<resources>
    <string name="app_name">Watcher</string>
    <string name="version">v1.0</string>
    <string name="wagons">Вагоны</string>
    <string name="fm">Статус антенн</string>
    <string name="option">Опции</string>
    <string name="view_fm_level">Посмотреть</string>
    <string name="not_connection">Нет соединения</string>
    <string name="metro_line">Линия:</string>
    <string name="wagon_number">Вагон:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>